added animation to the mapicon

--- a/index.html
+++ b/index.html
@@ -6,10 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>The Brew Box</title>
 </head>
 
 <body>
+    <div class="navbar">
+        <ul>
+            <li><a href="#">MENY</a></li>
+            <li><a href="#">KAFFE</a></li>
+            <li> <a href="#">JOBB</a></li>
+            <li><a href="#">HÅLLBARHET</a></li>
+        </ul>
+        <div class="logo-text">The Brew Box</div>
+
+        <div class="location">
+            <a href="#"><img src="/location-dot-solid.svg" alt="" class="map-icon"></a>
+            <p>Hitta oss</p>
+        </div>
+    </div>
 
 </body>
 
