--- a/index.html
+++ b/index.html
@@ -20,11 +20,46 @@
         <div class="logo-text">The Brew Box</div>
 
         <div class="location">
+            <h1>FAQs</h1>
             <a href="#"><img src="/location-dot-solid.svg" alt="" class="map-icon"></a>
-            <p>Hitta oss</p>
+            <h2>Hitta oss</h2>
         </div>
     </div>
 
+    <div class="hero">
+        <form class="form">
+            <div class="hero-text">Registrera dig för nyhetsbrev från The Brew Box!</div>
+            <br>
+            <div>
+                <label for="fname">Förnamn:</label>
+                <input id="fname" type="text" name="fname" maxlength="30" required>
+            </div>
+            <br>
+            <div>
+                <label for="lname">Efternamn:</label>
+                <input id="lname" type="text" name="lname" maxlength="30" required>
+            </div>
+            <br>
+            <div>
+                <label for="bdate">Född: </label>
+                <input type="date" id="bdate" name="bdate">
+            </div>
+            <br>
+            <div>
+                <label for="email">E-postadress:</label>
+                <input type="email" id="email" name="email" placeholder="example@domain.com">
+            </div>
+            <br>
+            <div>
+                <label for="phone">Mobilnummer:</label>
+                <input type="tel" id="phone" name="phone" placeholder="+46">
+            </div>
+            <br>
+            <div>
+                <button id="submit" type="submit" name="submit">Registrera </button>
+            </div>
+        </form>
+    </div>
 </body>
 
 </html>
