--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/5129eda4f8.js" crossorigin="anonymous"></script>
     <title>The Brew Box</title>
 </head>
 
@@ -61,6 +62,39 @@
                 <button id="submit" type="submit" name="submit">Registrera </button>
             </div>
         </form>
+    </div>
+
+    <div class="footer">
+        <div class="col-1">
+            <h3>MENY</h3>
+            <a href="#">Vårt kaffe</a>
+            <a href="#">Om oss</a>
+            <a href="#">Meny</a>
+            <a href="#">Hitta oss</a>
+            <a href="#">Kontakt</a>
+            <a href="#">FAQs</a>
+        </div>
+
+        <div class="col-2">
+            <h3>INFORMATION
+            </h3>
+            <a href="#">Karriär</a>
+            <a href="#">Närring och allergener</a>
+            <a href="#">Sekretesspolicy</a>
+            <a href="#">Cookiepolicy</a>
+            <a href="#">Villkor</a>
+        </div>
+
+        <div class="col-3">
+            <h3>Följ oss</h3>
+            <a href="#">Nyheter</a>
+            <div class="social-icons">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+
+            </div> 
+        </div>
+
     </div>
 </body>
 
